2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* test/run-test.rb: fix extension library path.

2010-09-21  Kouhei Sutou  <kou@cozmixng.org>

	* ./: make buildable by rake-compiler.

	* src/ -> ext/pango/

	* src/lib/: -> lib/

2010-02-02  Hiroyuki Ito <ZXB01226@nifty.com>

	* src/rbpangogravity.c (Init_pango_gravity): remove redundant
	"void" in the function's parameter.

2010-01-17  Hiroyuki Ito  <ZXB01226@nifty.com>

	* src/rbpangogravity.c: fix indentation.

	* src/rbpangogravity.c: add Pango::Gravity#vertical?.

2010-01-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangoscript.c: Pango::Script#get_gravity doesn't accept
	'wide' argument with Pango < 1.26 because
	pango_gravity_get_for_script_and_width() is defined since Pango
	1.26.

	* src/rbpangogravity.c (Init_pango_gravity): don't define
	Pango::Gravity on Pango < 1.16 environment.

	* src/rbpangoscript.c: Pango::Script#gravity ->
	Pango::Script#get_gravity.

2010-01-17  Hiroyuki Ito  <ZXB01226@nifty.com>

	* src/rbpangoattribute.c,
	src/rbpangocontext.c,
	src/rbpangofontdescription.c,
	src/rbpangogravity.c,
	src/rbpangomatrix.c,
	src/rbpangoscript.c: support PangoGravity.

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/pango.rb: use gem version rcairo as fallback.
	Patch by OBATA Akio. Thanks!!!

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

2009-03-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangoattribute.c, test/test-attribute.rb: add
	Pango::Attribute#start_index= and Pango::Attribute#end_index=.
	Suggested by Geoff Youngs. Thanks!!!

	* src/rbpangolanguage.c, test/test-language.rb: bind
	Pango::Language.default.

	* test/run-test.rb: set $VERBOSE.

2009-02-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/pango.rb: fix indent.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2008-09-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangofontdescription.c (font_desc_initialize): fix memory leak.
