@@ -1,5 +1,7 @@
 2010-09-23  Kouhei Sutou  <kou@cozmixng.org>
 
+	* lib/pango.rb: support bundled Windows DLL.
+
 	* test/run-test.rb: fix extension library path.
 
 2010-09-21  Kouhei Sutou  <kou@cozmixng.org>
